Added style in html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
-Vigneshwar 
-<br>
-I'm 18 years old and a young guy with lot of dreams. <br>
-My Native is Trichirapalli. I have a elder brother & sister. <br>
-<br>
 
-I completed 10th in 2020. And, I completed 12th in 2022. <br> 
-I'm currently enrolled in Freshworks Software Academy. <br>
-I'm an Artist, Poeter, Singer, Speaker, etc.., <br> My Aim is to become an IAS Officer. <br>
-I Love doing Art & crafts. And I love Playing Badmiton. <br>
+<html>
+<body>
+<head> <h1> Vigneshwar </h1> </head>
+       <title> VV </title>
+
+<link rel="stylesheet" href="style.css" /> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+
+
+
+
+<p>I'm 18 years old and a young guy with lot of dreams.
+My Native is Trichirapalli. I have a elder brother & sister.
+I completed 10th in 2020. And, I completed 12th in 2022.
+I'm currently enrolled in Freshworks Software Academy.
+I'm an Artist, Poeter, Singer, Speaker, etc.., My Aim is to become an IAS Officer. <br>
+I Love doing Art & crafts. And I love Playing Badmiton.
 I love night ride in bike with my friends. (Long ride with beautiful atmosphere) <br>
-My Favourite colour is Sky blue and Rose. <br>
-Cheers!!
+My Favourite colour is Sky blue and Rose.</p>
+Cheers!! 
+
+</body>
+</html>
+
  
